--- a/SGA/LOGIN/templates/auditoria.html
+++ b/SGA/LOGIN/templates/auditoria.html
@@ -1,19 +1,14 @@
+<!-- auditoria.html -->
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
 <title>Auditoria</title>
 <link rel="stylesheet" href="/static/admin/css/base.css">
-
-  <link rel="stylesheet" href="/static/admin/css/dark_mode.css">
-  <script src="/static/admin/js/theme.js" defer></script>
-
-
-  <link rel="stylesheet" href="/static/admin/css/nav_sidebar.css">
-  <script src="/static/admin/js/nav_sidebar.js" defer></script>
-
+<link rel="stylesheet" href="/static/admin/css/dark_mode.css">
+<script src="/static/admin/js/theme.js" defer></script>
+<link rel="stylesheet" href="/static/admin/css/nav_sidebar.css">
+<script src="/static/admin/js/nav_sidebar.js" defer></script>
 <link rel="stylesheet" href="/static/admin/css/forms.css">
-
-
 <script src="/admin/jsi18n/"></script>
 <script src="/static/admin/js/vendor/jquery/jquery.js"></script>
 <script src="/static/admin/js/calendar.js"></script>
@@ -25,14 +20,9 @@
 <script src="/static/admin/js/urlify.js"></script>
 <script src="/static/admin/js/prepopulate.js"></script>
 <script src="/static/admin/js/vendor/xregexp/xregexp.js"></script>
-
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/admin/css/responsive.css">
-    
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="/static/admin/css/responsive.css">
 <meta name="robots" content="NONE,NOARCHIVE">
-
 <style>
         .logo-small {
           width: 50px; /* Cambia este valor según el tamaño deseado */
@@ -40,395 +30,73 @@
           padding-right: 30px;
         }
 </style>
-
 </head>
 
-<body class=" app-LOGIN model-auditoria change-form"
-  data-admin-utc-offset="0">
+<body class="app-LOGIN model-auditoria change-form" data-admin-utc-offset="0">
 <a href="#content-start" class="skip-to-content-link">Skip to main content</a>
 <!-- Container -->
 <div id="container">
-
-    
     <!-- Header -->
-      <!-- Breadcrumbs -->
-        <nav aria-label="Breadcrumbs">
+    <!-- Breadcrumbs -->
+    <nav aria-label="Breadcrumbs">
         <div class="breadcrumbs">
             <a href="/LOGIN/home/">Home</a> &rsaquo;
             <a href="">AUDITAR</a> &rsaquo;
         </div>
-        </nav>
+    </nav>
 
-      <header id="header">
+    <header id="header">
         <div id="branding">
-        
-<div id="site-name">
-        <img src="/static/imagen/logosga.png" alt="Logo SGA" class="logo-small">
-        <a href="/admin/">SISTEMA DE GESTION DE AUDITORIA</a></div>
-
-
+            <div id="site-name">
+                <img src="/static/imagen/logosga.png" alt="Logo SGA" class="logo-small">
+                <a href="/admin/">SISTEMA DE GESTION DE AUDITORIA</a>
+            </div>
         </div>
-        
-        
         <div id="user-tools">
-            
-                Welcome,
-                <strong>USER</strong>.
-              
-                <form id="logout-form" method="post" action="/admin/logout/">
-                    <input type="hidden" name="csrfmiddlewaretoken" value="JIJwpHHQoY9cozrUBYRjzS0nLuH2fVChlKib0B31Vg6IgzPrWnjH2UZglsA4zesm">
-                    <button type="submit">Log out</button>
-                </form>
-                
-<button class="theme-toggle">
-  <div class="visually-hidden theme-label-when-auto">Toggle theme (current theme: auto)</div>
-  <div class="visually-hidden theme-label-when-light">Toggle theme (current theme: light)</div>
-  <div class="visually-hidden theme-label-when-dark">Toggle theme (current theme: dark)</div>
-  <svg aria-hidden="true" class="theme-icon-when-auto">
-    <use xlink:href="#icon-auto" />
-  </svg>
-  <svg aria-hidden="true" class="theme-icon-when-dark">
-    <use xlink:href="#icon-moon" />
-  </svg>
-  <svg aria-hidden="true" class="theme-icon-when-light">
-    <use xlink:href="#icon-sun" />
-  </svg>
-</button>
-
-            
+            Welcome, <strong>USER</strong>.
+            <form id="logout-form" method="post" action="/admin/logout/">
+                <input type="hidden" name="csrfmiddlewaretoken" value="JIJwpHHQoY9cozrUBYRjzS0nLuH2fVChlKib0B31Vg6IgzPrWnjH2UZglsA4zesm">
+                <button type="submit">Log out</button>
+            </form>
+            <button class="theme-toggle">
+                <div class="visually-hidden theme-label-when-auto">Toggle theme (current theme: auto)</div>
+                <div class="visually-hidden theme-label-when-light">Toggle theme (current theme: light)</div>
+                <div class="visually-hidden theme-label-when-dark">Toggle theme (current theme: dark)</div>
+                <svg aria-hidden="true" class="theme-icon-when-auto">
+                    <use xlink:href="#icon-auto" />
+                </svg>
+                <svg aria-hidden="true" class="theme-icon-when-dark">
+                    <use xlink:href="#icon-moon" />
+                </svg>
+                <svg aria-hidden="true" class="theme-icon-when-light">
+                    <use xlink:href="#icon-sun" />
+                </svg>
+            </button>
         </div>
-        
-        
-        
-      </header>
-    
+    </header>
     <!-- END Header -->
-    
-      <nav aria-label="Breadcrumbs">
-        
-
-
-      </nav>
-    
-    
 
     <div class="main" id="main">
-      
-        
-          
-
-<nav class="sticky" id="nav-sidebar" aria-label="Sidebar">
-  <input type="search" id="nav-filter"
-         placeholder="Start typing to filter…"
-         aria-label="Filter navigation items">
-  
-
-</nav>
-
-        
-      
-      <main id="content-start" class="content" tabindex="-1">
-        
-          
-        
-        <!-- Content -->
-        <div id="content" class="colM">
-          
-          <h1>Auditoria</h1>
-          
-          <div id="content-main">
-
-
-
-<form method="post" id="auditoria_form" novalidate><input type="hidden" name="csrfmiddlewaretoken" value="JIJwpHHQoY9cozrUBYRjzS0nLuH2fVChlKib0B31Vg6IgzPrWnjH2UZglsA4zesm">
-<div>
-
-
-
-
-
-
-
-  <fieldset class="module aligned ">
-    
-    
-    
-        <div class="form-row field-agenda_auditorias">
-            
-            
-                <div>
-                    
-                        <div class="flex-container">
-                            
-                                <label class="required" for="id_agenda_auditorias">Seleccionar auditoria:</label>
-                                
-                                    <div class="related-widget-wrapper" data-model-ref="agenda auditorias">
-    <select name="agenda_auditorias" required id="id_agenda_auditorias">
-  <option value="" selected>---------</option>
-
-</select>
-    
-        <a class="related-widget-wrapper-link change-related" id="change_id_agenda_auditorias"
-            data-href-template="/admin/LOGIN/agendaauditorias/__fk__/change/?_to_field=id_agenda&amp;_popup=1"
-            data-popup="yes"
-            title="Change selected agenda auditorias"><img src="/static/admin/img/icon-changelink.svg" alt="" width="20" height="20"></a><a class="related-widget-wrapper-link add-related" id="add_id_agenda_auditorias"
-            data-popup="yes"
-            href="/admin/LOGIN/agendaauditorias/add/?_to_field=id_agenda&amp;_popup=1"
-            title="Add another agenda auditorias"><img src="/static/admin/img/icon-addlink.svg" alt="" width="20" height="20"></a><a class="related-widget-wrapper-link view-related" id="view_id_agenda_auditorias"
-             data-href-template="/admin/LOGIN/agendaauditorias/__fk__/change/?_to_field=id_agenda"
-             title="View selected agenda auditorias"><img src="/static/admin/img/icon-viewlink.svg" alt="" width="20" height="20"></a>
-    
-</div>
-                                
-                            
+        <nav class="sticky" id="nav-sidebar" aria-label="Sidebar">
+            <input type="search" id="nav-filter" placeholder="Start typing to filter…" aria-label="Filter navigation items">
+        </nav>
+        <main id="content-start" class="content" tabindex="-1">
+            <!-- Content -->
+            <div id="content" class="colM">
+                <h1>Auditoria</h1>
+                <div id="content-main">
+                    <form method="post" id="auditoria_form" novalidate>
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <div class="submit-row">
+                            <input type="submit" value="AUDITAR" class="default" name="_auditar">
+                            <input type="submit" value="Guardar y Continuar Editando" name="_continue">
                         </div>
-                    
+                    </form>
                 </div>
-            
-            
-        </div>
-    
-        <div class="form-row field-fecha_inicio_auditoria">
-            
-            
-                <div>
-                    
-                        <div class="flex-container">
-                            
-                                <label class="required">Fecha inicio auditoria:</label>
-                                
-                                    <p class="datetime">
-  Date: <input type="text" name="fecha_inicio_auditoria_0" class="vDateField" size="10" required id="id_fecha_inicio_auditoria_0">
-
-<br>
-  Time: <input type="text" name="fecha_inicio_auditoria_1" class="vTimeField" size="8" required id="id_fecha_inicio_auditoria_1">
-
-
-</p>
-                                
-                            
-                        </div>
-                    
-                </div>
-            
-            
-        </div>
-    
-        <div class="form-row field-fecha_fin_auditoria">
-            
-            
-                <div>
-                    
-                        <div class="flex-container">
-                            
-                                <label class="required">Fecha fin auditoria:</label>
-                                
-                                    <p class="datetime">
-  Date: <input type="text" name="fecha_fin_auditoria_0" class="vDateField" size="10" required id="id_fecha_fin_auditoria_0">
-
-<br>
-  Time: <input type="text" name="fecha_fin_auditoria_1" class="vTimeField" size="8" required id="id_fecha_fin_auditoria_1">
-
-
-</p>
-                                
-                            
-                        </div>
-                    
-                </div>
-            
-            
-        </div>
-    
-        <div class="form-row field-fecha_inicio_plazo">
-            
-            
-                <div>
-                    
-                        <div class="flex-container">
-                            
-                                <label class="required">Fecha inicio plazo:</label>
-                                
-                                    <p class="datetime">
-  Date: <input type="text" name="fecha_inicio_plazo_0" class="vDateField" size="10" required id="id_fecha_inicio_plazo_0">
-
-<br>
-  Time: <input type="text" name="fecha_inicio_plazo_1" class="vTimeField" size="8" required id="id_fecha_inicio_plazo_1">
-
-
-</p>
-                                
-                            
-                        </div>
-                    
-                </div>
-            
-            
-        </div>
-    
-        <div class="form-row field-estado_auditoria">
-            
-            
-                <div>
-                    
-                        <div class="flex-container">
-                            
-                                <label class="required" for="id_estado_auditoria">Estado auditoria:</label>
-                                
-                                    <select name="estado_auditoria" required id="id_estado_auditoria">
-  <option value="" selected>---------</option>
-
-  <option value="APROBADA">Aprobada</option>
-
-  <option value="REPROBADA">Reprobada</option>
-
-  <option value="EVALUANDO">Evaluando</option>
-
-</select>
-                                
-                            
-                        </div>
-                    
-                </div>
-            
-            
-        </div>
-    
-        <div class="form-row field-observacion">
-            
-            
-                <div>
-                    
-                        <div class="flex-container">
-                            
-                                <label for="id_observacion">Observacion:</label>
-                                
-                                    <textarea name="observacion" cols="40" rows="10" class="vLargeTextField" id="id_observacion">
-</textarea>
-                                
-                            
-                        </div>
-                    
-                </div>
-            
-            
-        </div>
-    
-        <div class="form-row field-fecha_fin_plazo">
-            
-            
-                <div>
-                    
-                        <div class="flex-container">
-                            
-                                <label>Fecha fin plazo:</label>
-                                
-                                    <p class="datetime">
-  Date: <input type="text" name="fecha_fin_plazo_0" class="vDateField" size="10" id="id_fecha_fin_plazo_0">
-
-<br>
-  Time: <input type="text" name="fecha_fin_plazo_1" class="vTimeField" size="8" id="id_fecha_fin_plazo_1">
-
-
-</p>
-                                
-                            
-                        </div>
-                    
-                </div>
-            
-            
-        </div>
-    
-        <div class="form-row field-fecha_cierre_auditoria">
-            
-            
-                <div>
-                    
-                        <div class="flex-container">
-                            
-                                <label>Fecha cierre auditoria:</label>
-                                
-                                    <p class="datetime">
-  Date: <input type="text" name="fecha_cierre_auditoria_0" class="vDateField" size="10" id="id_fecha_cierre_auditoria_0">
-
-<br>
-  Time: <input type="text" name="fecha_cierre_auditoria_1" class="vTimeField" size="8" id="id_fecha_cierre_auditoria_1">
-
-
-</p>
-                                
-                            
-                        </div>
-                    
-                </div>
-            
-            
-        </div>
-    
-</fieldset>
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="submit-row">
-
-<input type="submit" value="Save" class="default" name="_save">
-
-<input type="submit" value="Save and add another" name="_addanother">
-<input type="submit" value="Save and continue editing" name="_continue">
-
-
-
-</div>
-
-
-
-    <script id="django-admin-form-add-constants"
-            src="/static/admin/js/change_form.js"
-            
-                data-model-name="auditoria"
-            
-            async>
-    </script>
-
-
-
-
-<script id="django-admin-prepopulated-fields-constants"
-        src="/static/admin/js/prepopulate_init.js"
-        data-prepopulated-fields="[]">
-</script>
-
-
-</div>
-</form></div>
-
-          
-          <br class="clear">
-        </div>
-        <!-- END Content -->
-        <div id="footer"></div>
-      </main>
+            </div>
+        </main>
     </div>
 </div>
-<!-- END Container -->
-
-<!-- SVGs -->
-<svg xmlns="http://www.w3.org/2000/svg" class="base-svgs">
-  <symbol viewBox="0 0 24 24" width="1rem" height="1rem" id="icon-auto"><path d="M0 0h24v24H0z" fill="currentColor"/><path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2V4a8 8 0 1 0 0 16z"/></symbol>
-  <symbol viewBox="0 0 24 24" width="1rem" height="1rem" id="icon-moon"><path d="M0 0h24v24H0z" fill="currentColor"/><path d="M10 7a7 7 0 0 0 12 4.9v.1c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2h.1A6.979 6.979 0 0 0 10 7zm-6 5a8 8 0 0 0 15.062 3.762A9 9 0 0 1 8.238 4.938 7.999 7.999 0 0 0 4 12z"/></symbol>
-  <symbol viewBox="0 0 24 24" width="1rem" height="1rem" id="icon-sun"><path d="M0 0h24v24H0z" fill="currentColor"/><path d="M12 18a6 6 0 1 1 0-12 6 6 0 0 1 0 12zm0-2a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM11 1h2v3h-2V1zm0 19h2v3h-2v-3zM3.515 4.929l1.414-1.414L7.05 5.636 5.636 7.05 3.515 4.93zM16.95 18.364l1.414-1.414 2.121 2.121-1.414 1.414-2.121-2.121zm2.121-14.85l1.414 1.415-2.121 2.121-1.414-1.414 2.121-2.121zM5.636 16.95l1.414 1.414-2.121 2.121-1.414-1.414 2.121-2.121zM23 11v2h-3v-2h3zM4 11v2H1v-2h3z"/></symbol>
-</svg>
-<!-- END SVGs -->
 </body>
 </html>
