--- a/SGA/LOGIN/templates/home_auditor.html
+++ b/SGA/LOGIN/templates/home_auditor.html
@@ -1,345 +1,196 @@
-
 <!DOCTYPE html>
-
 <html lang="en-us" dir="ltr">
 <head>
-<title>Home Site</title>
-<link rel="stylesheet" href="/static/admin/css/base.css">
-
+  <title>Home Site</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  
+  <!-- Tus otros estilos y scripts -->
+  <link rel="stylesheet" href="/static/admin/css/base.css">
   <link rel="stylesheet" href="/static/admin/css/dark_mode.css">
   <script src="/static/admin/js/theme.js" defer></script>
-
-
   <link rel="stylesheet" href="/static/admin/css/nav_sidebar.css">
   <script src="/static/admin/js/nav_sidebar.js" defer></script>
-
-
-  
   <link rel="stylesheet" href="/static/admin/css/changelists.css">
-  
-  
-    <script src="/admin/jsi18n/"></script>
-
-<script src="/static/admin/js/vendor/jquery/jquery.js"></script>
-<script src="/static/admin/js/jquery.init.js"></script>
-<script src="/static/admin/js/core.js"></script>
-<script src="/static/admin/js/admin/RelatedObjectLookups.js"></script>
-<script src="/static/admin/js/actions.js"></script>
-<script src="/static/admin/js/urlify.js"></script>
-<script src="/static/admin/js/prepopulate.js"></script>
-<script src="/static/admin/js/vendor/xregexp/xregexp.js"></script>
-<script src="/static/admin/js/filters.js" defer></script>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/admin/css/responsive.css">
-    
-
-<meta name="robots" content="NONE,NOARCHIVE">
-<style>
-  .logo-small {
-    width: 50px; /* Cambia este valor según el tamaño deseado */
-    height: auto; /* Para mantener la proporción */
-    padding-right: 30px;
-}
-</style>
-
+  <script src="/admin/jsi18n/"></script>
+  <script src="/static/admin/js/vendor/jquery/jquery.js"></script>
+  <script src="/static/admin/js/jquery.init.js"></script>
+  <script src="/static/admin/js/core.js"></script>
+  <script src="/static/admin/js/admin/RelatedObjectLookups.js"></script>
+  <script src="/static/admin/js/actions.js"></script>
+  <script src="/static/admin/js/urlify.js"></script>
+  <script src="/static/admin/js/prepopulate.js"></script>
+  <script src="/static/admin/js/vendor/xregexp/xregexp.js"></script>
+  <script src="/static/admin/js/filters.js" defer></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/static/admin/css/responsive.css">
+  <meta name="robots" content="NONE,NOARCHIVE">
+  <style>
+    .logo-small {
+      width: 100px;
+      height: auto;
+      padding-right: 30px;
+    }
+    .carousel-item img {
+      width: 100%;
+      height: 20%;
+      object-fit: cover;
+      object-position: center; /* Centra la imagen hacia abajo */
+    }
+    .carousel-inner {
+      width: 100%;
+      height: 100%; /* Ajusta la altura según tus necesidades */
+      position: relative;
+    }
+    .carousel-caption {
+      position: absolute;
+      bottom: 20px; /* Ajusta la posición según tus necesidades */
+      left: 50%;
+      transform: translateX(-50%);
+      color: rgb(0, 59, 107);
+      background-color: rgba(255, 255, 255, 0.5);
+      padding: 10px;
+      border-radius: 5px;
+    }
+  </style>
 </head>
 
-<body class=" app-LOGIN model-users change-list"
-  data-admin-utc-offset="0">
-
-<a href="#content-start" class="skip-to-content-link">Skip to main content</a>
-<!-- Container -->
-<div id="container">
-
-    
+<body class="app-LOGIN model-users change-list" data-admin-utc-offset="0">
+  <a href="#content-start" class="skip-to-content-link">Skip to main content</a>
+  <!-- Container -->
+  <div id="container">
     <!-- Header -->
-    
-      <header id="header">
-        <div id="branding">
-        
-<div id="site-name">
-  <img src="/static/imagen/logosga.png" alt="Logo SGA" class="logo-small">
-  <a href="/admin/">SISTEMA DE GESTION DE AUDITORIA</a></div>
-
-
+    <header id="header">
+      <div id="branding">
+        <div id="site-name">
+          <img src="/static/imagen/logosga.png" alt="Logo SGA" class="logo-small">
+          <a href="/admin/">SISTEMA DE GESTION DE AUDITORIA</a>
         </div>
-        
-        
-        <div id="user-tools">
-            
-                Welcome,
-                <strong>USER</strong>.
-
-                <!--
-                <form id="logout-form" method="post" action="/admin/logout/">
-                    <input type="hidden" name="csrfmiddlewaretoken" value="HXIBvMcqAwcO8Hb5Mws40ooeMg5UpkTvUqgCmuueVdeeblD1sczrDgeLeKgMySG4">
-                    <button type="submit">Log out</button>
-                </form>  
-                -->
-                
-                <a href="/LOGIN/">Cerrar Sesión</a>
-                
-                
-<button class="theme-toggle">
-  <div class="visually-hidden theme-label-when-auto">Toggle theme (current theme: auto)</div>
-  <div class="visually-hidden theme-label-when-light">Toggle theme (current theme: light)</div>
-  <div class="visually-hidden theme-label-when-dark">Toggle theme (current theme: dark)</div>
-  <svg aria-hidden="true" class="theme-icon-when-auto">
-    <use xlink:href="#icon-auto" />
-  </svg>
-  <svg aria-hidden="true" class="theme-icon-when-dark">
-    <use xlink:href="#icon-moon" />
-  </svg>
-  <svg aria-hidden="true" class="theme-icon-when-light">
-    <use xlink:href="#icon-sun" />
-  </svg>
-</button>
-
-            
-        </div>
-
-      </header>
-    
-    <!-- END Header -->
-    
-      <nav aria-label="Breadcrumbs">
-        
-<div class="breadcrumbs">
-<a href="/LOGIN/home/">Home</a>
-&rsaquo; <a href="/admin/LOGIN/">Login</a>
-&rsaquo; Userss
-</div>
-
-      </nav>
-    
-    
-
-    <div class="main" id="main">
-      
-        
-          
-<button class="sticky toggle-nav-sidebar" id="toggle-nav-sidebar" aria-label="Toggle navigation"></button>
-<nav class="sticky" id="nav-sidebar" aria-label="Sidebar">
-  <input type="search" id="nav-filter"
-         placeholder="Start typing to filter…"
-         aria-label="Filter navigation items">
-  
-
-
-  
-    <div class="app-auth module">
-      <table>
-        <caption>
-          <a href="/admin/auth/" class="section" title="Models in the Authentication and Authorization application">Authentication and Authorization</a>
-        </caption>
-        
-        
-          <tr class="model-user">
-            
-              <th scope="row"><a href="/admin/auth/user/">Users</a></th>
-
-              <td><a href="/admin/auth/user/add/" class="addlink">Add</a></td>
-
-          </tr>
-        
-      </table>
-    </div>
-  
-    <div class="app-LOGIN module current-app">
-      <table>
-        <caption>
-          <a href="/LOGIN/home/" class="section" title="Models in the Login application">HOME</a>
-        </caption>
-        
-        
-      
-        
-          <tr class="model-evaluacionactividad">
-            
-              <th scope="row"><a href="/LOGIN/historial/">CONSULTAR AUDITORIAS</a></th>
-            
-          </tr>
-        
-          <tr class="model-formulario">
-            
-              <th scope="row"><a href="/LOGIN/auditoria/">AUDITAR</a></th>
-            
-            
-          </tr>
-        
-          <tr class="model-historialauditoria">
-            
-              <th scope="row"><a href="/LOGIN/agendar_auditoria/">AGENDAR AUDITORIA</a></th>
-            
-
-            
-          </tr>
-        
-          <tr class="model-plantilla">
-            
-              
-			  <th scope="row"><a href="/LOGIN/crear_plantilla/">CREAR PLANTILLA</a></th>
-
-            
-          </tr>
-
-
-          <tr class="model-formulario">
-            
-              
-            <th scope="row"><a href="/LOGIN/formulario_actividades/">EDITAR FOMRULARIO</a></th>
-    
-                
-              </tr>
-        
-          <tr class="model-users current-model">
-            
-              <th scope="row"><a href="/LOGIN/guardar_usuario/" aria-current="page">CREAR USUARIO</a></th>
-            
-
-            
-          </tr>
-        
-      </table>
-    </div>
-  
-
-
-</nav>
-
-        
-      
-      <main id="content-start" class="content" tabindex="-1">
-        
-          
-        
-        <!-- Content -->
-        <div id="content" class="">
-          
-          <h1>Select users to change</h1>
-          
-          
-  <div id="content-main">
-    
-        <ul class="object-tools">
-          
-            
-
-
-  
-  <li>
-    
-    <a href="/admin/LOGIN/users/add/" class="addlink">
-      Add users
-    </a>
-  </li>
-  
-
-
-          
-        </ul>
-    
-    
-    <div class="module" id="changelist">
-      <div class="changelist-form-container">
-        
-
-
-        
-
-        <form id="changelist-form" method="post" novalidate><input type="hidden" name="csrfmiddlewaretoken" value="HXIBvMcqAwcO8Hb5Mws40ooeMg5UpkTvUqgCmuueVdeeblD1sczrDgeLeKgMySG4">
-        
-
-        
-          
-<div class="actions">
-  
-    
-    <label>Action: <select name="action" required>
-  <option value="" selected>---------</option>
-
-  <option value="delete_selected">Delete selected userss</option>
-
-</select></label><input type="hidden" name="select_across" value="0" class="select-across">
-    
-    
-    <button type="submit" class="button" title="Run the selected action" name="index" value="0">Go</button>
-    
-    
-    
-        <span class="action-counter" data-actions-icnt="1">0 of 1 selected</span>
-        
-    
-    
-  
-</div>
-
-          
-
-
-<div class="results">
-<table id="result_list">
-<thead>
-<tr>
-
-<th scope="col" class="action-checkbox-column">
-   
-   <div class="text"><span><input type="checkbox" id="action-toggle" aria-label="Select all objects on this page for an action"></span></div>
-   <div class="clear"></div>
-</th>
-<th scope="col" class="column-__str__">
-   
-   <div class="text"><span>Users</span></div>
-   <div class="clear"></div>
-</th>
-</tr>
-</thead>
-<tbody>
-
-
-<tr><td class="action-checkbox"><input type="checkbox" name="_selected_action" value="1" class="action-select" aria-label="Select this object for an action - Jhonny"></td><th class="field-__str__"><a href="/admin/LOGIN/users/1/change/">Jhonny</a></th></tr>
-
-</tbody>
-</table>
-</div>
-
-
-          
-        
-        
-
-<p class="paginator">
-
-1 users
-
-
-</p>
-
-        </form>
       </div>
-      
-        
-      
-    </div>
-  </div>
-
-          
-          <br class="clear">
+      <div id="user-tools">
+        Welcome,
+        <strong>USER</strong>.
+        <a href="/LOGIN/">Cerrar Sesión</a>
+        <button class="theme-toggle">
+          <div class="visually-hidden theme-label-when-auto">Toggle theme (current theme: auto)</div>
+          <div class="visually-hidden theme-label-when-light">Toggle theme (current theme: light)</div>
+          <div class="visually-hidden theme-label-when-dark">Toggle theme (current theme: dark)</div>
+          <svg aria-hidden="true" class="theme-icon-when-auto">
+            <use xlink:href="#icon-auto" />
+          </svg>
+          <svg aria-hidden="true" class="theme-icon-when-dark">
+            <use xlink:href="#icon-moon" />
+          </svg>
+          <svg aria-hidden="true" class="theme-icon-when-light">
+            <use xlink:href="#icon-sun" />
+          </svg>
+        </button>
+      </div>
+    </header>
+    <!-- END Header -->
+    <nav aria-label="Breadcrumbs">
+      <div class="breadcrumbs">
+        <a href="/LOGIN/home/">Home</a>
+        &rsaquo; <a href="/admin/LOGIN/">Login</a>
+        &rsaquo; Users
+      </div>
+    </nav>
+    <div class="main" id="main">
+      <button class="sticky toggle-nav-sidebar" id="toggle-nav-sidebar" aria-label="Toggle navigation"></button>
+      <nav class="sticky" id="nav-sidebar" aria-label="Sidebar">
+        <input type="search" id="nav-filter" placeholder="Start typing to filter…" aria-label="Filter navigation items">
+        <div class="app-auth module">
+          <table>
+            <caption>
+              <a href="/admin/auth/" class="section" title="Models in the Authentication and Authorization application">Authentication and Authorization</a>
+            </caption>
+            <tr class="model-user">
+              <th scope="row"><a href="/admin/auth/user/">Users</a></th>
+              <td><a href="/admin/auth/user/add/" class="addlink">Add</a></td>
+            </tr>
+          </table>
         </div>
-        <!-- END Content -->
-        <div id="footer"></div>
+        <div class="app-LOGIN module current-app">
+          <table>
+            <caption>
+              <a href="/LOGIN/home/" class="section" title="Models in the Login application">HOME</a>
+            </caption>
+            <tr class="model-evaluacionactividad">
+              <th scope="row"><a href="/LOGIN/historial/">CONSULTAR AUDITORIAS</a></th>
+            </tr>
+            <tr class="model-formulario">
+              <th scope="row"><a href="/LOGIN/auditoria/">AUDITAR</a></th>
+            </tr>
+            <tr class="model-historialauditoria">
+              <th scope="row"><a href="/LOGIN/agendar_auditoria/">AGENDAR AUDITORIA</a></th>
+            </tr>
+            <tr class="model-plantilla">
+              <th scope="row"><a href="/LOGIN/crear_plantilla/">CREAR PLANTILLA</a></th>
+            </tr>
+            <tr class="model-formulario">
+              <th scope="row"><a href="/LOGIN/formulario_actividades/">EDITAR FOMRULARIO</a></th>
+            </tr>
+            <tr class="model-users current-model">
+              <th scope="row"><a href="/LOGIN/guardar_usuario/" aria-current="page">CREAR USUARIO</a></th>
+            </tr>
+          </table>
+        </div>
+      </nav>
+      <main id="content-start" class="content" tabindex="-1">
+        <div id="content" class="">
+          <h1>SGA - SISTEMA DE GESTION DE AUDITORIAS</h1>
+          <!-- Aquí va el carrusel -->
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+              <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/static/imagen/sga1.jpg" alt="Primera Imagen">
+                <div class="container">
+                  <div class="carousel-caption text-start">
+                    <h1>HISTORIAL</h1>
+                    <p>Revisa los últimos registros de tus auditorías...</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/static/imagen/sga2.jpg" alt="Segunda Imagen">
+                <div class="container">
+                  <div class="carousel-caption">
+                    <h1>CREAR USUARIO</h1>
+                    <p>Crea tu usuario y empieza a auditar ya!!</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/static/imagen/sga3.jpg" alt="Tercera Imagen">
+                <div class="container">
+                  <div class="carousel-caption text-end">
+                    <h1>CREAR PLANTILLA</h1>
+                    <p>Crea tus plantillas personalizadas...</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <script src="/static/admin/js/nav_sidebar.js" defer></script>
+        </div>
       </main>
     </div>
-</div>
-<!-- END Container -->
-
-<!-- SVGs -->
-<svg xmlns="http://www.w3.org/2000/svg" class="base-svgs">
-  <symbol viewBox="0 0 24 24" width="1rem" height="1rem" id="icon-auto"><path d="M0 0h24v24H0z" fill="currentColor"/><path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2V4a8 8 0 1 0 0 16z"/></symbol>
-  <symbol viewBox="0 0 24 24" width="1rem" height="1rem" id="icon-moon"><path d="M0 0h24v24H0z" fill="currentColor"/><path d="M10 7a7 7 0 0 0 12 4.9v.1c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2h.1A6.979 6.979 0 0 0 10 7zm-6 5a8 8 0 0 0 15.062 3.762A9 9 0 0 1 8.238 4.938 7.999 7.999 0 0 0 4 12z"/></symbol>
-  <symbol viewBox="0 0 24 24" width="1rem" height="1rem" id="icon-sun"><path d="M0 0h24v24H0z" fill="currentColor"/><path d="M12 18a6 6 0 1 1 0-12 6 6 0 0 1 0 12zm0-2a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM11 1h2v3h-2V1zm0 19h2v3h-2v-3zM3.515 4.929l1.414-1.414L7.05 5.636 5.636 7.05 3.515 4.93zM16.95 18.364l1.414-1.414 2.121 2.121-1.414 1.414-2.121-2.121zm2.121-14.85l1.414 1.415-2.121 2.121-1.414-1.414 2.121-2.121zM5.636 16.95l1.414 1.414-2.121 2.121-1.414-1.414 2.121-2.121zM23 11v2h-3v-2h3zM4 11v2H1v-2h3z"/></symbol>
-</svg>
-<!-- END SVGs -->
+  </div>
+  <!-- END Container -->
 </body>
 </html>
